// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLink renders as custom component 1`] = `
<Button
  block={false}
  ghost={false}
  href="//example.com"
  htmlType="button"
  loading={false}
  rel="noopener"
  target="_blank"
>
  button example
</Button>
`;

exports[`ExternalLink renders with only href and children 1`] = `
<a
  href="//example.com"
  rel="noopener"
  target="_blank"
>
  example
</a>
`;

exports[`ExternalLink renders with only href, children and extra props 1`] = `
<a
  className="test"
  href="//example.com"
  rel="noopener"
  target="_blank"
>
  example
</a>
`;
